# DDOS-PROJECT

./: .gitignore  FLUENTD_INTEGRATION_README.md  GRAFANA_DDOS_MONITORING_GUIDE.md  LR_model_artifacts.pkl  configg_template.json  consumer.py  docker-compose.yml  fluentd_logger.py  ml_api.py  ml_api_ultra_fast.py  package-lock.json  performance_test.py  producer.py  producer_optimized.py  pyproject.toml  readme.md  start_system_optimized.py  temp_config.json  test_ml_api_performance.py  test_pcap_to_csv.py
Flows_test/: 12_07_25_20_04_35.pcap  12_07_25_20_04_54.pcap  12_07_25_20_05_11.pcap  12_07_25_20_05_28.pcap  12_07_25_20_05_45.pcap  12_07_25_20_06_02.pcap  12_07_25_20_06_19.pcap  12_07_25_20_06_36.pcap  12_07_25_20_06_53.pcap  12_07_25_20_11_20.pcap  12_07_25_20_11_38.pcap  12_07_25_20_11_55.pcap  12_07_25_20_12_12.pcap  12_07_25_20_12_28.pcap  12_07_25_20_12_45.pcap  19_06_25_11_55_53.pcap  19_06_25_11_56_24.pcap  19_06_25_11_56_54.pcap  19_06_25_11_57_24.pcap
NTLFlowLyzer/: configg.json
data/: LR_model_artifacts.pkl  data.ipynb
flow_tests_csv/: 19_06_25_11_55_53.csv  19_06_25_11_56_24.csv  19_06_25_11_56_54.csv  test.ipynb  test_output.csv
fluentd/: Dockerfile
fluentd/conf/: fluent.conf
fluentd/grafana-dashboards/: dashboard.yml  ddos-monitoring.json
fluentd/grafana-datasources/: datasource.yml
grafana/Alerts/: Alerts-ceq74fd2xjj0ga-1751006515934.yaml
grafana/grafana-dashboards/: dashboard.yml  ddos-monitoring.json  testing.py
grafana/grafana-datasources/: datasource.yml
