[project]
name = "ddos_project"
version = "0.1.0"
description = ""
authors = [
    {name = "SAHIL PARASHAR",email = "sahilparashar361@gmail.com"}
]
package-mode = false
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
